refactor and add current effect to LEDev.ino

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "serialport": "^10.5.0"
   },
   "scripts": {
-    "compile": "arduino-cli compile -b arduino:avr:uno",
+    "compile": "arduino-cli compile -b arduino:avr:uno && browserify LEDev.js -o LEDev.browserify.js ",
     "upload": "arduino-cli upload -b arduino:avr:uno -p /dev/tty.usbmodem14101",
     "monitor": "screen /dev/tty.usbmodem14101 9600",
     "deploy": "npm run compile && npm run upload"
